Update website content

--- a/research.html
+++ b/research.html
@@ -80,7 +80,7 @@
                                                     <em>extremum seeking</em>,
                                                     and <em>reinforcement learning</em>—and
                                                     certify stability and performance using the <em>small-gain
-                                                        theorem</em> and <em>singular-perturbation
+                                                        theorem</em> and <em>singular perturbation
                                                         theory</em>. Applications include distributed computation, sensor networks, robotic
                                                     swarms, and smart grids.
                                                 </p>
