Update website content

--- a/research.html
+++ b/research.html
@@ -75,13 +75,15 @@
                                                 <p>
                                                     My work develops <strong>robust</strong> algorithms that provably
                                                     converge despite complex agent dynamics,
-                                                    parametric uncertainties, and exogenous disturbances. We co-design the
+                                                    parametric uncertainties, and exogenous disturbances. We co-design
+                                                    the
                                                     optimizer and controller—leveraging <em>output regulation</em>,
                                                     <em>extremum seeking</em>,
                                                     and <em>reinforcement learning</em>—and
                                                     certify stability and performance using the <em>small-gain
                                                         theorem</em> and <em>singular perturbation
-                                                        theory</em>. Applications include distributed computation, sensor networks, robotic
+                                                        theory</em>. Applications include distributed computation,
+                                                    sensor networks, robotic
                                                     swarms, and smart grids.
                                                 </p>
                                             </td>
@@ -101,20 +103,26 @@
                             <tr>
                                 <td style="padding:20px;width:100%;vertical-align:middle">
                                     <h3>Traffic Signal Optimization</h3>
-                                    <table style="width:100%;border:0px;">
-                                        <tr>
-                                            <td style="width:30%;padding-right:20px;">
-                                                <img src="images/placeholder.png"
-                                                    alt="Traffic Signal Optimization Image"
-                                                    style="width:100%; border-radius:10px;">
-                                            </td>
-                                            <td style="width:70%;">
-                                                <p>
-                                                    在这里写下关于“交通信号优化”研究方向的详细介绍。您可以介绍项目的背景、挑战、您的创新解决方案以及相关的论文或代码链接。
-                                                </p>
-                                            </td>
-                                        </tr>
-                                    </table>
+
+                                    <!-- 上方图片容器 -->
+                                    <div
+                                        style="width:100%; margin-bottom:20px; display:flex; justify-content:space-between; gap:20px;">
+                                        <!-- 第一张图片 -->
+                                        <img src="images/sumo.gif" alt="SUMO simulation using proposed MPC controllers"
+                                            style="width:calc(50% - 10px); border-radius:10px; object-fit: cover;">
+
+                                        <!-- 第二张图片 -->
+                                        <img src="images/performance.png" alt="Quene length comparison"
+                                            style="width:calc(50% - 10px); border-radius:10px; object-fit: cover;">
+                                    </div>
+
+                                    <!--下方文字描述 -->
+                                    <div>
+                                        <p>
+                                            在这里写下关于“交通信号优化”研究方向的详细介绍。您可以介绍项目的背景、挑战、您的创新解决方案以及相关的论文或代码链接。这段文字现在会显示在上面两张图片的下方。
+                                        </p>
+                                    </div>
+
                                 </td>
                             </tr>
 
