--- a/research.html
+++ b/research.html
@@ -107,12 +107,11 @@
         <table style="width:100%;border:0px;">
             <tr>
                 <!-- 左列：图片 -->
-                <!-- 改动：宽度从30%增加到40%，让图片更大 -->
-                <td style="width:40%; padding-right:20px; vertical-align:top;">
+                <td style="width:50%; padding-right:20px; vertical-align:top;">
                     <!-- 改动：重新添加 figure 和 figcaption 来显示标题 -->
                     <figure style="margin:0;">
                         <img src="images/performance.png" 
-                             alt="Queue length comparison"
+                             alt="Performance comparison"
                              style="width:100%; border-radius:10px; display: block;">
                         <figcaption style="text-align:center; padding-top:8px; font-size:14px; color:#555;">
                             Performance comparison
@@ -122,7 +121,7 @@
 
                 <!-- 右列：文字描述 -->
                 <!-- 改动：宽度从70%减小到60% -->
-                <td style="width:60%; vertical-align:top;">
+                <td style="width:50%; vertical-align:top;">
                     <p>
                         Urban traffic signals are often fixed or heuristically actuated, and they struggle to handle uncertain, time-varying 
                         demand under tight latency constraints. I use a <strong>data-driven</strong> approach that learns traffic dynamics from 
